--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
   },
